--- a/z-ml-overlay-flyme-mms/res/values-hi/plurals.xml
+++ b/z-ml-overlay-flyme-mms/res/values-hi/plurals.xml
@@ -1,82 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <plurals name="abc_slice_duration_days">
-        <item quantity="other">%d days ago</item>
-        <item quantity="one">%d day ago</item>
-    </plurals>
-    <plurals name="abc_slice_duration_min">
-        <item quantity="other">%d min ago</item>
-        <item quantity="one">%d min ago</item>
-    </plurals>
-    <plurals name="abc_slice_duration_years">
-        <item quantity="other">%d yr ago</item>
-        <item quantity="one">%d yr ago</item>
-    </plurals>
-    <plurals name="controls_number_of_favorites">
-        <item quantity="other">%s controls added.</item>
-        <item quantity="one">%s control added.</item>
-    </plurals>
-    <plurals name="fgs_manager_footer_label">
-        <item quantity="other">%s apps are active</item>
-        <item quantity="one">%s app is active</item>
-    </plurals>
-    <plurals name="kg_password_default_pin_message">
-        <item quantity="other">Enter SIM PIN. You have %d remaining attempts.</item>
-        <item quantity="one">Enter SIM PIN. You have %d remaining attempt before you must contact your carrier to unlock your device.</item>
-    </plurals>
-    <plurals name="kg_password_default_pin_message_multi_sim">
-        <item quantity="other">Enter SIM%1$d PIN, you have %2$d remaining attempts.</item>
-        <item quantity="one">Enter SIM%1$d PIN, you have %2$d remaining attempt before you must contact your carrier to unlock your device.</item>
-    </plurals>
-    <plurals name="kg_password_default_puk_message">
-        <item quantity="other">SIM is now disabled. Enter PUK code to continue. You have %d remaining attempts before SIM becomes permanently unusable. Contact carrier for details.</item>
-        <item quantity="one">SIM is now disabled. Enter PUK code to continue. You have %d remaining attempt before SIM becomes permanently unusable. Contact carrier for details.</item>
-    </plurals>
-    <plurals name="kg_password_wrong_pin_code">
-        <item quantity="other">Incorrect SIM PIN code, you have %d remaining attempts.</item>
-        <item quantity="one">Incorrect SIM PIN code, you have %d remaining attempt before you must contact your carrier to unlock your device.</item>
-    </plurals>
-    <plurals name="kg_password_wrong_pin_code_multi_sim">
-        <item quantity="other">Incorrect SIM%1$d PIN code, you have %2$d remaining attempts.</item>
-        <item quantity="one">Incorrect SIM%1$d PIN code, you have %2$d remaining attempt before you must contact your carrier to unlock your device.</item>
-    </plurals>
-    <plurals name="kg_password_wrong_puk_code">
-        <item quantity="other">Incorrect SIM PUK code, you have %d remaining attempts before SIM becomes permanently unusable.</item>
-        <item quantity="one">Incorrect SIM PUK code, you have %d remaining attempt before SIM becomes permanently unusable.</item>
+    <plurals name="confirm_delete_conversation">
+        <item quantity="other">Delete %1$s conversation(s)</item>
+        <item quantity="one">Delete %1$s conversation(s)</item>
     </plurals>
     <plurals name="mtrl_badge_content_description">
         <item quantity="other">%d new notifications</item>
         <item quantity="one">%d new notification</item>
     </plurals>
-    <plurals name="mz_fp_management_count">
-        <item quantity="other">%1$d fingerprint(s) captured</item>
-        <item quantity="one">%1$d fingerprint(s) captured</item>
-    </plurals>
-    <plurals name="notification_group_overflow_description">
-        <item quantity="other">%s more notifications inside.</item>
-        <item quantity="one">%s more notification inside.</item>
-    </plurals>
-    <plurals name="quick_settings_bluetooth_secondary_label_num_devices">
-        <item quantity="other">Bluetooth %d</item>
-        <item quantity="one">Bluetooth %d</item>
-    </plurals>
-    <plurals name="quick_settings_hotspot_secondary_label_num_devices">
-        <item quantity="other">%d devices</item>
-        <item quantity="one">%d device</item>
-    </plurals>
-    <plurals name="snoozeHourOptions">
-        <item quantity="other">%d hours</item>
-        <item quantity="one">%d hour</item>
-        <item quantity="two">%d hours</item>
-        <item quantity="few">%d hours</item>
-    </plurals>
-    <plurals name="snoozeMinuteOptions">
-        <item quantity="other">%d minutes</item>
-        <item quantity="one">%d minute</item>
-        <item quantity="few">%d minutes</item>
-    </plurals>
-    <plurals name="user_limit_reached_message">
-        <item quantity="other">You can add up to %d users.</item>
-        <item quantity="one">Only one user can be created.</item>
+    <plurals name="slide_duration">
+        <item quantity="other">%s s</item>
+        <item quantity="one">%s s</item>
+        <item quantity="few">%s s</item>
     </plurals>
 </resources>
